--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "bcryptjs": "^2.4.3",
     "concurrently": "^5.2.0",
     "config": "^3.3.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-validator": "^6.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.19",
     "nodemon": "^2.0.4"
-  },
-  "proxy": "http://localhost:5000"
+  }
 }
